--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
 <body>
   <canvas id="game"></canvas>
 
-  <!-- مكتبة Three.js -->
+  <!-- أزرار التحكم للجوال -->
+  <div id="controls">
+    <div class="row">
+      <button data-move="forward">↑</button>
+    </div>
+
+    <div class="row">
+      <button data-move="left">←</button>
+      <button data-move="backward">↓</button>
+      <button data-move="right">→</button>
+    </div>
+  </div>
+
+  <!-- مكتبة 3D -->
   <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
 
-  <!-- سكربت اللعبة -->
+  <!-- كود اللعبة -->
   <script type="module" src="src/main.js"></script>
 </body>
 </html>
