--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="row">
       <button data-move="forward">↑</button>
     </div>
-
     <div class="row">
       <button data-move="left">←</button>
       <button data-move="backward">↓</button>
@@ -23,7 +22,7 @@
     </div>
   </div>
 
-  <!-- مكتبة 3D -->
+  <!-- مكتبة THREE -->
   <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
 
   <!-- كود اللعبة -->
