--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <!-- مكتبة THREE -->
+  <!-- مكتبة THREE (لازم قبل main.js) -->
   <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
 
   <!-- كود اللعبة -->
